<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="next">Продолжить</string>
    <string name="specify_name">Укажите название</string>
    <string name="enter_hint">Введите значение</string>
    <string name="specify_description">Укажите описание</string>
    <string name="state">Состояние</string>
    <string name="type">Выберете тип объявления</string>
    <string name="upload_title">Внешний вид</string>
    <string name="photos">Фотографии</string>
    <string name="upload_image">Загрузить изображение</string>
    <string name="specify_price">Укажите цену</string>
    <string name="publish">Пусто, разместите свое объявление</string>
</resources>